examples/invalid/effect-output-scope.whip
workflow EffectOutputScope

queue backlog {
  tracker builtin
}

agent worker {
  provider fixture
  profile "repo-writer"
  capacity 1
}

rule bad_scope
  when backlog has ready item as item
=> {
  claim item as claim

  tell worker "{{ claim.value.id }}"
}
